Fix panel buttons alignment

--- a/public/style.css
+++ b/public/style.css
@@ -518,6 +518,7 @@ hr {
     top: 5px;
     margin-right: 5px;
     z-index: 2000;
+    min-width: 55px;
 }
 
 .panelControlBar .drag-grabber {
